# ghibli_wrapper

./: README.md  pyproject.toml
.github/workflows/: ci_tests.yml
ghibli_wrapper/: __main__.py  app.py  cache.py  exceptions.py  ghibli.py  utils.py
templates/: movies.html
tests/: conftest.py  test_app.py  test_cache.py  test_ghibli.py  test_utils.py
tests/cassettes/: TestGhibliWithVcrRequestPlayback.test_get_all_films_happy_case.yaml  TestGhibliWithVcrRequestPlayback.test_get_all_people_happy_case.yaml  test_get_all_films_happy_case.yaml  test_get_all_people_happy_case.yaml
