[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ghibli_wrapper"
version = "0.0.0"
description = "A small wrapper app around the Studio Ghibli API"
authors = ["Nick Badger <nbadger1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
base58 = "^2.0.1"
Hypercorn = "^0.11.1"
trio = "^0.17.0"
trio-asyncio = "^0.11.0"
asks = "^2.4.12"
Jinja2 = "^2.11.2"
# Starlette didn't include this as a listed dep, grumble grumble
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.1.2"
flake8 = "^3.8.4"
pyperclip = "^1.8.1"
pytest-trio = "^0.7.0"
pytest-vcr = "^1.0.2"
vcrpy = "^4.1.1"
pytest-freezegun = "^0.4.2"
# I really don't want to depend on a pre-release build from git, but the
# current version doesn't patch time.monotonic(). IRL I would try to find a
# workaround to this, though poetry pinning to this specific git hash means
# this isn't the end of the world. For what it's worth, this is just in dev
freezegun = {git = "https://github.com/spulec/freezegun.git"}
httpx = "^0.16.1"

[tool.pytest.ini_options]
addopts = "-rA -q"
testpaths = [
    "tests"
]
trio_mode = true
